# zapcut

./: .gitignore  README.md  tag_bump.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
@docs/: 100X-OPTIMIZATION-COMPLETED.md  DEBUG-VIDEO-LOADING.md  MVP-COMPLETION-STATUS.md  PERFORMANCE-SYSTEM.md  github-releases-guide.md  product-requirements-document.md  prompt.md  tasks-checklists.md
zapcut/: .eslintignore  .eslintrc.cjs  BUILD-SUMMARY.md  CHANGELOG.md  QUICK-START.md  README.md  SETUP.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
zapcut/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
zapcut/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json  update_tauri_config.py
zapcut/src-tauri/binaries/: .gitignore  README.md  download_ffmpeg.sh
zapcut/src-tauri/binaries/linux-x86_64/: .gitkeep
zapcut/src-tauri/binaries/macos-x86_64/: .gitkeep
zapcut/src-tauri/binaries/windows-x86_64/: .gitkeep
zapcut/src-tauri/capabilities/: default.json
zapcut/src-tauri/icons/: ZapCut.icns  clear_icon_cache.sh  create_icons.sh  icon.icns
zapcut/src-tauri/src/: main.rs
zapcut/src-tauri/src/commands/: app.rs  export.rs  media.rs  mod.rs  prerender.rs  recording.rs
zapcut/src-tauri/src/utils/: app_init.rs  ffmpeg.rs  mod.rs
zapcut/src/components/: MainBody.tsx
zapcut/src/constants/: colors.tsx  index.ts  tailwindClasses.ts
zapcut/src/hooks/: useAppInitialization.ts  useClipPreloader.ts  (+3 more)
(+37 files in other folders)
