[package]
name = "zapcut"
version = "0.1.0"
description = "A high-performance desktop video editor"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "process"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
lazy_static = "1.4"
base64 = "0.22"
libc = "0.2"
dirs = "5.0"
urlencoding = "2.1"
http = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Graphics_Capture", "Media"] }

